--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <title>iRizq Kitchen</title>
     
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="../../public/image/cake.png">
+    <link rel="icon" type="image/x-icon" href="image/cake.png">
 
     <!-- swiper link  -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file  -->
-    <link rel="stylesheet" href="../../public/stylesheets/home.css">
+    <link rel="stylesheet" href="stylesheets/home.css">
 
 </head>
 
@@ -26,7 +26,7 @@
     <!-- header section start here  -->
     <header class="header">
         <div class="logoContent">
-            <a href="home.html" class="logo"><img src="../../public/image/cake.png" alt="cake icon"></a>
+            <a href="home.html" class="logo"><img src="image/cake.png" alt="cake icon"></a>
             <h1 class="logoName">iRizq Kitchen</h1>
         </div>
 
@@ -66,8 +66,8 @@
 
           <div class="responsive">
               <div class="gallery">
-                <a target="_blank" href="../../public/image/kek-pisang.jpg">
-                  <img src="../../public/image/kek-pisang.jpg" alt="Cinque Terre" width="600" height="400">
+                <a target="_blank" href="image/kek-pisang.jpg">
+                  <img src="image/kek-pisang.jpg" alt="Cinque Terre" width="600" height="400">
                 </a>
                 <div class="name">kek pisang</div>
                 <div class="desc">Moist and sweet cake made with banana slices. A real treat to be savored with a good cup of coffee or a cold glass of milk.</div>
@@ -76,8 +76,8 @@
             
             <div class="responsive">
               <div class="gallery">
-                <a target="_blank" href="../../public/image/kek-batik.jpg">
-                  <img src="../../public/image/kek-batik.jpg" alt="Forest" width="600" height="400">
+                <a target="_blank" href="image/kek-batik.jpg">
+                  <img src="image/kek-batik.jpg" alt="Forest" width="600" height="400">
                 </a>
                 <div class="name">kek batik indulgence</div>
                 <div class="desc">An excellent combination rich in chocolate, biscuits, and cream cheese gives it a soft and creamy taste.</div>
@@ -86,8 +86,8 @@
 
             <div class="responsive">
               <div class="gallery">
-                <a target="_blank" href="../../public/image/kek-marble.jpg">
-                  <img src="../../public/image/kek-marble.jpg" alt="Forest" width="600" height="400">
+                <a target="_blank" href="image/kek-marble.jpg">
+                  <img src="image/kek-marble.jpg" alt="Forest" width="600" height="400">
                 </a>
                 <div class="name">kek marble</div>
                 <div class="desc">A cake with a streaked or mottled appearance (like marble) can captivate your attention.</div>
@@ -96,8 +96,8 @@
 
             <div class="responsive">
               <div class="gallery">
-                <a target="_blank" href="../../public/image/kek-brownies.jpg">
-                  <img src="../../public/image/kek-brownies.jpg" alt="Forest" width="600" height="400">
+                <a target="_blank" href="image/kek-brownies.jpg">
+                  <img src="image/kek-brownies.jpg" alt="Forest" width="600" height="400">
                 </a>
                 <div class="name">brownies</div>
                 <div class="desc">A square or rectangular chocolate-baked confection. Cakey on the outside and fudgy in the middle!</div>
@@ -158,7 +158,7 @@
       <!-- newsletter section start here  -->        
       <div class="newsletter">
         <form action="#" name="my-newsletter" onsubmit="return subscribe()" required>
-          <img src="../../public/image/newsletter.png" alt="newsletter" height="100" width="100">
+          <img src="image/newsletter.png" alt="newsletter" height="100" width="100">
           <h2>Subscribe for Latest Update</h2>
           <input type="email" name="email" id="email-box" placeholder="Email address"> 
           <button type="submit" id="submit-btn">Subscribe</button>
@@ -213,7 +213,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <!-- custom js file  -->
-  <script src="../../public/javascript/home.js"></script>
+  <script src="javascript/home.js"></script>
 
 </body>
 
