--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
         </form>
     </header>
     <!-- header section end here  -->
-<div class="container">
+<div class="formcontainer">
     <h1 class="loginform d-flex justify-content-center">WELCOME TO iRizq Kitchen !!</h1>
     <form class="d-flex justify-content-center">
     <div class="card col-6">
@@ -54,51 +54,53 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="newuser">
+            <p>
+              New User?  
+              <span><a href="register.html">REGISTER HERE</a></span>
+            </p>
+        <button type="submit" class="btn btn-warning justify-content-center">Submit</button>
         </div>
         </div>
     </form></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-   
-    <!-- footer section start here  -->
-    <footer class="footer" id="contact">
-        <div class="box-container">
-            
-            <div class="box">
-                <h3>Opening Hours</h3>
-                <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-            </div>
-
-            <div class="box">
-                <h3>Contact Us</h3>
-                <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-                <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-                <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-                <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-            </div>
-
-            <div class="box">
-                <h3>About Us</h3>
-                <a href="http://127.0.0.1:5502/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-                <a href="http://127.0.0.1:5502/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
-                <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-            </div>
-
+    
+ <!-- footer section start here  -->
+ <footer class="footer" id="contact">
+    <div class="box-container">
+        
+        <div class="box">
+            <h3>Opening Hours</h3>
+            <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
         </div>
-        <div class="share">
-            <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-            <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+
+        <div class="box">
+            <h3>Contact Us</h3>
+            <p>iRizq Kitchen Sabak Bernam (HQ)</p>
+            <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
+            <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
+            <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
         </div>
-        <div class="credit">
-            irizqkitchen <span>&copy;</span> 2022
+
+        <div class="box">
+            <h3>About Us</h3>
+            <a href="http://127.0.0.1:5502/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
+            <a href="http://127.0.0.1:5502/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
+            <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
         </div>
-    </footer>
+
+    </div>
+    <div class="share">
+        <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
+        <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+    </div>
+    <div class="credit">
+        irizqkitchen <span>&copy;</span> 2022
+    </div>
+</footer>
 
   </body>
+  
 </html>
