update login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
               New User?  
               <span><a href="register.html">REGISTER HERE</a></span>
             </p>
-        <button type="submit" class="btn btn-warning justify-content-center">Submit</button>
+        <button type="submit" class="btn btn-warning ">Submit</button>
         </div>
         </div>
     </form></div>
