update login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,7 +54,7 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <div class="newuser">
+        <div class="text-center">
             <p>
               New User?  
               <span><a href="register.html">REGISTER HERE</a></span>
