--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,34 +21,25 @@
 
 </head>
 
+<!-- header section start here  -->
+<header class="header">
+  <div class="logoContent">
+      <a href="home.html" class="logo"><img src="../public/image/cake.png" alt="cake icon"></a>
+      <h1 class="logoName">iRizq Kitchen</h1>
+  </div>
+
+  <nav class="navbar">
+      <a href="home.html">Home</a>
+      <a href="catalogue.html">Catalogue</a>
+      <a href="about.html">About</a>
+      <a href="faqs.html">FAQs</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="userprofile.html">Profile</a>
+  </nav>
+</header>
+<!-- header section end here  -->
+
 <body>
-
-    <!-- header section start here  -->
-    <header class="header">
-        <div class="logoContent">
-            <a href="home.html" class="logo"><img src="../public/image/cake.png" alt="cake icon"></a>
-            <h1 class="logoName">iRizq Kitchen</h1>
-        </div>
-
-        <nav class="navbar">
-            <a href="home.html">Home</a>
-            <a href="catalogue.html">Catalogue</a>
-            <a href="about.html">About</a>
-            <a href="faqs.html">FAQs</a>
-            <a href="feedback.html">Feedback</a>
-        </nav>
-
-        <form class="formSearch" id="form" role="search">
-            <input type="search" id="query" name="Search" placeholder="Search..." aria-label="Search through site content">
-            <button>
-                <svg viewBox="0 0 1024 1024">
-                    <path class="path1" d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
-                    </path>
-                </svg>
-            </button>
-        </form>
-    </header>
-    <!-- header section end here  -->
 
 
     <!-- main section start here-->
@@ -169,42 +160,6 @@
     </main>
     <!--main section end here-->
 
-    <!-- footer section start here  -->
-    <footer class="footer" id="contact">
-      <div class="box-container">
-          
-          <div class="box">
-              <h3>Opening Hours</h3>
-              <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-          </div>
-
-          <div class="box">
-              <h3>Contact Us</h3>
-              <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-              <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-              <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-              <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-          </div>
-
-          <div class="box">
-            <h3>About Us</h3>
-            <a href="http://127.0.0.1:5502/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-            <a href="http://127.0.0.1:5502/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
-            <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-        </div>
-
-      </div>
-
-      <div class="share">
-          <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-          <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
-      </div>
-      <div class="credit">
-          irizqkitchen <span>&copy;</span> 2022
-      </div>
-    </footer>
-  <!-- footer section end here  -->
-
 
   <!-- swiper js link  -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -216,5 +171,37 @@
   <script src="../public/javascript/home.js"></script>
 
 </body>
+<!-- footer section start here  -->
+<footer class="footer" id="contact">
+  <div class="box-container">
+      
+      <div class="box">
+          <h3>Opening Hours</h3>
+          <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
+      </div>
 
+      <div class="box">
+          <h3>Contact Us</h3>
+          <p>iRizq Kitchen Sabak Bernam (HQ)</p>
+          <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
+          <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
+          <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
+      </div>
+
+      <div class="box">
+          <h3>About Us</h3>
+          <a href="http://127.0.0.1:5500/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
+          <a href="http://127.0.0.1:5500/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
+          <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
+      </div>
+
+  </div>
+  <div class="share">
+      <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
+      <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+  </div>
+  <div class="credit">
+      irizqkitchen <span>&copy;</span> 2022
+  </div>
+</footer>
 </html>
