update thymeleaf and register page for user

--- a/src/main/resources/templates/faqs.html
+++ b/src/main/resources/templates/faqs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,7 @@
     <title>FAQs</title>
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="../public/image/cake.png" />
+    <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}" />
 
     <!-- swiper link  -->
     <link
@@ -22,32 +22,30 @@
     />
 
     <!-- custom css file  -->
-    <link rel="stylesheet" href="../public/stylesheets/faqs.css" />
+    <link rel="stylesheet" th:href="@{stylesheets/faqs.css}" />
   </head>
 
-  <body>
-    <!-- header section start here  -->
-    <header class="header">
-      <div class="logoContent">
-        <a href="home.html" class="logo"
-          ><img src="../public/image/cake.png" alt="cake icon"
-        /></a>
-        <h1 class="logoName">iRizq Kitchen</h1>
-      </div>
+ <!-- header section start here  -->
+ <header class="header">
+  <div class="logoContent">
+      <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+      <h1 class="logoName">iRizq Kitchen</h1>
+  </div>
 
-      <nav class="navbar">
-        <a href="home.html">Home</a>
-        <a href="catalogue.html">Catalogue</a>
-        <a href="about.html">About</a>
-        <a href="faqs.html">FAQs</a>
-        <a href="feedback.html">Feedback</a>
-        <a href="userprofile.html">Profile</a>
-    </nav>
-    </header>
-    <!-- header section end here  -->
-    
+  <nav class="navbar">
+      <a th:href="@{/home}">Home</a>
+      <a th:href="@{/catalogue}">Catalogue</a>
+      <a th:href="@{/about}">About</a>
+      <a th:href="@{/faqs}">FAQs</a>
+      <a th:href="@{/feedback}">Feedback</a>
+      <a th:href="@{/userprofile}">Profile</a>
+  </nav>
+</header>
+<!-- header section end here  -->
+
+  <body>
     <main>
-        <img id="faq" src="../public/image/plaby-faq.png" alt="faq">   
+        <img id="faq" th:src="@{image/plaby-faq.png}" alt="faq">   
           <h1 class="faq-heading">Frequently Asked Questions </h1>
           <section class="faq-container">
             <div class="faq">
@@ -88,10 +86,10 @@
               <div class="faq-body">
                 <p>
                   You may place your order through our INSTAGRAM
-                  <span><a href="https://www.instagram.com/irizq_kitchen/">@irizq_kitchen</a></span>
+                  <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span>
                   or our
-                  <span><a href="https://web.facebook.com/rizq.khazinuddin">FACEBOOK</a></span>
-                  or by calling us at <a href="tel:+60 1123 4567" target="_blank">+60 11-2619 1035</a>
+                  <span><a th:href="@{https://web.facebook.com/rizq.khazinuddin}">FACEBOOK</a></span>
+                  or by calling us at <a th:href="@{tel:+60 1123 4567}" target="_blank">+60 11-2619 1035</a>
                 </p>
               </div>
             </div>
@@ -162,9 +160,9 @@
               <!-- faq answer -->
               <div class="faq-body">
                 <p>
-                  Please do contact us immediately at <a href="tel:+60 1123 4567" target="_blank">+60 11-2619 1035</a> 
+                  Please do contact us immediately at <a th:href="@{tel:+60 1123 4567}" target="_blank">+60 11-2619 1035</a> 
                   and send across accompanying images orders to 
-                  <span><a href="https://www.instagram.com/irizq_kitchen/">@irizq_kitchen</a></span> 
+                  <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span> 
                   if you receive any damaged cake. 
                 </p>
               </div>
@@ -180,8 +178,8 @@
                 <p>
                   We always like to hear from our customers. Please leave your 
                   feedback about us on our 
-                  <span><a href="feedback.html">feedback page</a></span>
-                  , DM us at <span><a href="https://www.instagram.com/irizq_kitchen/">@irizq_kitchen</a></span>
+                  <span><a th:href="@{/feedback}">feedback page</a></span>
+                  , DM us at <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span>
                   , or WhatsApp us with your feedback.
                 </p>
               </div>
@@ -190,53 +188,38 @@
     </main>
 
     <!-- footer section start here  -->
-    <footer class="footer" id="contact">
-      <div class="box-container">
-        <div class="box">
+ <footer class="footer" id="contact">
+  <div class="box-container">
+      
+      <div class="box">
           <h3>Opening Hours</h3>
-          <p>
-            Weekdays: 10:00AM - 5:00PM <br />
-            Weekends: 10:00AM - 6:00PM
-          </p>
-        </div>
+          <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
+      </div>
 
-        <div class="box">
+      <div class="box">
           <h3>Contact Us</h3>
           <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-          <p>
-            No.12 Jalan Dewan, Pekan Sabak Bernam, <br />
-            45200 Sabak Bernam, Selangor
-          </p>
-          <a href="tel:+60 1123 4567" target="_blank">
-            <i class="fas fa-phone"></i>+60 1123 4567</a
-          >
-          <a href="mailto: irizqkitchen@gmail.com" target="_blank">
-            <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a
-          >
-        </div>
+          <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
+          <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
+          <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
+      </div>
 
-        <div class="box">
+      <div class="box">
           <h3>About Us</h3>
-          <a href="http://127.0.0.1:5500/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-          <a href="http://127.0.0.1:5500/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
+          <a th:href="@{about.html#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+          <a th:href="@{about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
           <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
       </div>
-      </div>
-      <div class="share">
-        <a
-          href="https://web.facebook.com/rizq.khazinuddin"
-          class="fab fa-facebook-f"
-          target="_blank"
-        ></a>
-        <a
-          href="https://www.instagram.com/irizq_kitchen/"
-          class="fab fa-instagram"
-          target="_blank"
-        ></a>
-      </div>
-      <div class="credit">irizqkitchen <span>&copy;</span> 2022</div>
-    </footer>
 
+  </div>
+  <div class="share">
+      <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
+      <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+  </div>
+  <div class="credit">
+      irizqkitchen <span>&copy;</span> 2022
+  </div>
+</footer>
     <!-- swiper js link  -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
@@ -248,6 +231,6 @@
     ></script>
 
     <!-- custom js file  -->
-    <script src="../public/javascript/faqs.js"></script>
+    <script th:src="@{javascript/faqs.js}"></script>
   </body>
 </html>
