--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>About</title>
     
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="../public/image/cake.png">
+    <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
 
     <!-- swiper link  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -17,32 +17,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file  -->
-    <link rel="stylesheet" href="../public/stylesheets/about.css">
+    <link rel="stylesheet" th:href="@{stylesheets/about.css}">
 
 </head>
 
+ <!-- header section start here  -->
+ <header class="header">
+    <div class="logoContent">
+        <a th:href="@{/}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <h1 class="logoName">iRizq Kitchen</h1>
+    </div>
+  
+    <nav class="navbar">
+        <a th:href="@{/home}">Home</a>
+        <a th:href="@{/catalogue}">Catalogue</a>
+        <a th:href="@{/about}">About</a>
+        <a th:href="@{/faqs}">FAQs</a>
+        <a th:href="@{/feedback}">Feedback</a>
+        <a th:href="@{/userprofile}">Profile</a>
+    </nav>
+  </header>
+  <!-- header section end here  -->
+
 <body>
-
-    <!-- header section start here  -->
-    <header class="header">
-        <div class="logoContent">
-            <a href="home.html" class="logo"><img src="../public/image/cake.png" alt="cake icon"></a>
-            <h1 class="logoName">iRizq Kitchen</h1>
-        </div>
-
-        <nav class="navbar">
-            <a href="home.html">Home</a>
-            <a href="catalogue.html">Catalogue</a>
-            <a href="about.html">About</a>
-            <a href="faqs.html">FAQs</a>
-            <a href="feedback.html">Feedback</a>
-            <a href="userprofile.html">Profile</a>
-        </nav>
-
-        
-    </header>
-    <!-- header section end here  -->
-
     <main>
         <div class="intro">
             <h1>WELCOME TO iRizq Kitchen</h1>
@@ -53,7 +50,7 @@
             <div class="row">
                 <div class="column-00">
                     <video class="cakeVideo" height="800" controls autoplay muted loop>
-                        <source src="../public/video/videocake.mp4" type="video/mp4" class="videocakeMp4">
+                        <source th:src="@{video/videocake.mp4}" type="video/mp4" class="videocakeMp4">
                     </video>
                 </div>
 
@@ -79,14 +76,14 @@
         <div class="container1" >
             <div class="row">
               <div class="column-22">
-                <img src="../public/image/IMG_20220622_134856_486.jpg" alt="img" width="360" height="471">
+                <img th:src="@{image/IMG_20220622_134856_486.jpg}" alt="img" width="360" height="471">
               </div>
               
               <div class="column-66">
 
                 <!-- Vision Section -->
-                <h2 class="large-font" ><b>Vision</b></h2>
-                <p><span style="font-size:28px">Let us eat cake!</span> To establish a well known bakery in Sabak Bernam </p><br>
+                <h2 class=" large-font"  ><b>Vision</b></h2>
+                <p ><span style="font-size:28px">Let us eat cake!</span> To establish a well known bakery in Sabak Bernam </p><br>
                 
                 <!-- Mission Section -->
                 <h2 class="large-font" style="color:#8B4513;"><b>Mission</b></h2>
@@ -118,8 +115,8 @@
 
         <div class="box">
             <h3>About Us</h3>
-            <a href="http://127.0.0.1:5500/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-            <a href="http://127.0.0.1:5500/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
+            <a th:href="@{about.html#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+            <a th:href="@{about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
             <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
         </div>
 
@@ -142,6 +139,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <!-- custom js file  -->
-    <script src="../public/javascript/about.js"></script>
+    <script th:src="@{javascript/about.js}"></script>
 
 </html>
