--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -7,7 +7,7 @@
     <title>Menu</title>
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="../public/image/cake.png"/>
+    <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}"/>
 
     <!-- CSS Bootstrap only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
@@ -22,22 +22,25 @@
     <link rel="stylesheet" href="../public/stylesheets/menu.css"/>
   </head>
 
-  <body>
-    <!-- header section start here  -->
-    <header class="header">
-      <div class="logoContent">
-        <a href="home.html" class="logo"><img src="../public/image/cake.png" alt="cake icon"/></a>
-        <h1 class="logoName">iRizq Kitchen</h1>
-      </div>
+ <!-- header section start here  -->
+ <header class="header">
+  <div class="logoContent">
+      <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+      <h1 class="logoName">iRizq Kitchen</h1>
+  </div>
 
-      <nav class="navbar">
-        <a href="home.html">Home</a>
-        <a href="catalogue.html">Catalogue</a>
-        <a href="about.html">About</a>
-        <a href="faqs.html">FAQs</a>
-        <a href="feedback.html">Feedback</a>
-        <a href="userprofile.html">Profile</a>
-    </nav>
+  <nav class="navbar">
+      <a th:href="@{/}">Home</a>
+      <a th:href="@{/catalogue}">Catalogue</a>
+      <a th:href="@{/about}">About</a>
+      <a th:href="@{/faqs}">FAQs</a>
+      <a th:href="@{/feedback}">Feedback</a>
+      <a th:href="@{/userprofile}">Profile</a>
+  </nav>
+</header>
+<!-- header section end here  -->
+
+  <body>
 
     <!-- main section starts here -->
     <main>
@@ -54,9 +57,9 @@
         <tr>
           <td class="tableListPics1" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekpisang1"></div>
-              <div class="panel" id="kekpisang2"></div>
-              <div class="panel" id="kekpisang3"></div>
+              <div class="panel" id="kekpisang1" th:style="'background: url(/image/kekpisang.jpg)'"></div>
+              <div class="panel" id="kekpisang2" th:style="'background: url(/image/kekpisang2.jpg)'"></div>
+              <div class="panel" id="kekpisang3" th:style="'background: url(/image/kekpisang3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio1">
@@ -82,9 +85,9 @@
         <tr>
           <td class="tableListPics2" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekmarble1"></div>
-              <div class="panel" id="kekmarble2"></div>
-              <div class="panel" id="kekmarble3"></div>
+              <div class="panel" id="kekmarble1" th:style="'background: url(/image/marble.jpg)'"></div>
+              <div class="panel" id="kekmarble2" th:style="'background: url(/image/marble2.jpg)'"></div>
+              <div class="panel" id="kekmarble3" th:style="'background: url(/image/marble3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio2">
@@ -110,9 +113,9 @@
         <tr>
           <td class="tableListPics3" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekmarblecheese1"></div>
-              <div class="panel" id="kekmarblecheese2"></div>
-              <div class="panel" id="kekmarblecheese3"></div>
+              <div class="panel" id="kekmarblecheese1" th:style="'background: url(/image/marblecheese.jpg)'"></div>
+              <div class="panel" id="kekmarblecheese2" th:style="'background: url(/image/marblecheese2.jpg)'"></div>
+              <div class="panel" id="kekmarblecheese3" th:style="'background: url(/image/marblecheese3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio3">
@@ -132,9 +135,9 @@
         <tr>
           <td class="tableListPics4" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="redvelvet1"></div>
-              <div class="panel" id="redvelvet2"></div>
-              <div class="panel" id="redvelvet3"></div>
+              <div class="panel" id="redvelvet1" th:style="'background: url(/image/redvelvet.jpg)'"></div>
+              <div class="panel" id="redvelvet2" th:style="'background: url(/image/redvelvet2.jpg)'"></div>
+              <div class="panel" id="redvelvet3" th:style="'background: url(/image/redvelvet3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio4">
@@ -153,9 +156,9 @@
         <tr>
           <td class="tableListPics5" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekbatik1"></div>
-              <div class="panel" id="kekbatik2"></div>
-              <div class="panel" id="kekbatik3"></div>
+              <div class="panel" id="kekbatik1" th:style="'background: url(/image/kekbatik.jpg)'"></div>
+              <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg)'"></div>
+              <div class="panel" id="kekbatik3" th:style="'background: url(/image/kekbatik3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio5">
@@ -174,9 +177,9 @@
         <tr>
           <td class="tableListPics6" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="brownies1"></div>
-              <div class="panel" id="brownies2"></div>
-              <div class="panel" id="brownies3"></div>
+              <div class="panel" id="brownies1" th:style="'background: url(/image/brownies.jpg)'"></div>
+              <div class="panel" id="brownies2" th:style="'background: url(/image/brownies2.jpg)'"></div>
+              <div class="panel" id="brownies3" th:style="'background: url(/image/brownies3.jpg)'"></div>
             </div>
           </td>
           <td class="tableRadio6">
@@ -190,7 +193,7 @@
         <tr>
           <td colspan="3" style="background-color: #4c4c4c">
             <p class="order">
-              <a href="https://www.instagram.com/irizq_kitchen/" target="_blank">
+              <a th:href="@{https://www.instagram.com/irizq_kitchen/}" target="_blank">
                 <button type="button" class="btn btn-outline-dark">
                   Click Here To Order!
                 </button>
@@ -202,39 +205,39 @@
     </main>
     <!-- main section ends here -->
 
-    <!-- footer section start here  -->
-    <footer class="footer" id="contact">
-      <div class="box-container">
-          
-          <div class="box">
-              <h3>Opening Hours</h3>
-              <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-          </div>
-
-          <div class="box">
-              <h3>Contact Us</h3>
-              <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-              <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-              <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-              <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-          </div>
-
-          <div class="box">
-              <h3>About Us</h3>
-              <a href="http://127.0.0.1:5500/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-              <a href="http://127.0.0.1:5500/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
-              <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-          </div>
-
+   <!-- footer section start here  -->
+ <footer class="footer" id="contact">
+  <div class="box-container">
+      
+      <div class="box">
+          <h3>Opening Hours</h3>
+          <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
       </div>
-      <div class="share">
-          <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-          <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+
+      <div class="box">
+          <h3>Contact Us</h3>
+          <p>iRizq Kitchen Sabak Bernam (HQ)</p>
+          <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
+          <a th:href="@{tel:+60 1123 4567}" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
+          <a th:href="@{mailto: irizqkitchen@gmail.com}" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
       </div>
-      <div class="credit">
-          irizqkitchen <span>&copy;</span> 2022
+
+      <div class="box">
+          <h3>About Us</h3>
+          <a th:href="@{about.html#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+          <a th:href="@{about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
+          <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
       </div>
-  </footer>
+
+  </div>
+  <div class="share">
+      <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
+      <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+  </div>
+  <div class="credit">
+      irizqkitchen <span>&copy;</span> 2022
+  </div>
+</footer>
 
 
   <!-- swiper js link  -->
