--- a/src/main/resources/templates/userregister.html
+++ b/src/main/resources/templates/userregister.html
@@ -1,37 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register</title>
+    <title> User Registration</title>
      <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      <!-- favicon -->
-     <link rel="icon" type="image/x-icon" href="../public/image/cake.png">
+     <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
       <!-- cdn icon link  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <!-- custom css file  -->
-      <link rel="stylesheet" href="../public/stylesheets/register.css">
+      <link rel="stylesheet" th:href="@{stylesheets/register.css}">
       <!-- js bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </head>
-  <!-- header section start here  -->
-  <header class="header">
-    <div class="logoContent">
-        <a href="home.html" class="logo"><img src="../public/image/cake.png" alt="cake icon"></a>
-        <h1 class="logoName">iRizq Kitchen</h1>
-    </div>
-
-    <nav class="navbar">
-      <a href="home.html">Home</a>
-      <a href="catalogue.html">Catalogue</a>
-      <a href="about.html">About</a>
-      <a href="faqs.html">FAQs</a>
-      <a href="feedback.html">Feedback</a>
-      <a href="userprofile.html">Profile</a>
-  </nav>
-</header>
-<!-- header section end here  -->
+ 
   <body>
     
     <div class="formcontainer">
@@ -60,7 +44,7 @@
             <div class="text-center">
                 <p>
                   Already have account?  
-                  <span><a href="login.html">SIGN IN HERE</a></span>
+                  <span><a th:href="@{/}">SIGN IN HERE</a></span>
                 </p>
             <button type="submit" class="btn btn-warning ">Register</button>
             </div>
@@ -70,38 +54,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
   </body>
-  <!-- footer section start here  -->
- <footer class="footer" id="contact">
-    <div class="box-container">
-        
-        <div class="box">
-            <h3>Opening Hours</h3>
-            <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-        </div>
-
-        <div class="box">
-            <h3>Contact Us</h3>
-            <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-            <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-            <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-            <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-        </div>
-
-        <div class="box">
-            <h3>About Us</h3>
-            <a href="http://127.0.0.1:5502/about.html#:~:text=Location-,Vision,-Let%20us%20eat"> <i class="fas fa-arrow-right"></i>Vision</a>
-            <a href="http://127.0.0.1:5502/about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love"> <i class="fas fa-arrow-right"></i>Mission</a>
-            <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-        </div>
-
-    </div>
-    <div class="share">
-        <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-        <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
-    </div>
-    <div class="credit">
-        irizqkitchen <span>&copy;</span> 2022
-    </div>
-</footer>
 
 </html>
