--- a/src/main/resources/templates/user/about.html
+++ b/src/main/resources/templates/user/about.html
@@ -33,7 +33,6 @@
         <a th:href="@{/catalogue}">Catalogue</a>
         <a th:href="@{/about}">About</a>
         <a th:href="@{/faqs}">FAQs</a>
-        <a th:href="@{/feedback}">Feedback</a>
         <a th:href="@{/userprofile}">Profile</a>
     </nav>
   </header>
@@ -115,8 +114,8 @@
 
         <div class="box">
             <h3>About Us</h3>
-            <a th:href="@{about.html#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
-            <a th:href="@{about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
+            <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+          <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
             <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
         </div>
 
