--- a/src/main/resources/templates/user/menu.html
+++ b/src/main/resources/templates/user/menu.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
     <!-- custom css file  -->
-    <link rel="stylesheet" href="../public/stylesheets/menu.css"/>
+    <link rel="stylesheet" th:href="@{stylesheets/menu.css}"/>
   </head>
 
  <!-- header section start here  -->
@@ -30,11 +30,10 @@
   </div>
 
   <nav class="navbar">
-      <a th:href="@{/}">Home</a>
+      <a th:href="@{user/home}">Home</a>
       <a th:href="@{/catalogue}">Catalogue</a>
       <a th:href="@{/about}">About</a>
       <a th:href="@{/faqs}">FAQs</a>
-      <a th:href="@{/feedback}">Feedback</a>
       <a th:href="@{/userprofile}">Profile</a>
   </nav>
 </header>
@@ -57,9 +56,9 @@
         <tr>
           <td class="tableListPics1" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekpisang1" th:style="'background: url(/image/kekpisang.jpg)'"></div>
-              <div class="panel" id="kekpisang2" th:style="'background: url(/image/kekpisang2.jpg)'"></div>
-              <div class="panel" id="kekpisang3" th:style="'background: url(/image/kekpisang3.jpg)'"></div>
+              <div class="panel" id="kekpisang1" th:style="'background: url(/image/kekpisang.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekpisang2" th:style="'background: url(/image/kekpisang2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekpisang3" th:style="'background: url(/image/kekpisang3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio1">
@@ -85,9 +84,9 @@
         <tr>
           <td class="tableListPics2" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekmarble1" th:style="'background: url(/image/marble.jpg)'"></div>
-              <div class="panel" id="kekmarble2" th:style="'background: url(/image/marble2.jpg)'"></div>
-              <div class="panel" id="kekmarble3" th:style="'background: url(/image/marble3.jpg)'"></div>
+              <div class="panel" id="kekmarble1" th:style="'background: url(/image/marble.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekmarble2" th:style="'background: url(/image/marble2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekmarble3" th:style="'background: url(/image/marble3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio2">
@@ -113,9 +112,9 @@
         <tr>
           <td class="tableListPics3" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekmarblecheese1" th:style="'background: url(/image/marblecheese.jpg)'"></div>
-              <div class="panel" id="kekmarblecheese2" th:style="'background: url(/image/marblecheese2.jpg)'"></div>
-              <div class="panel" id="kekmarblecheese3" th:style="'background: url(/image/marblecheese3.jpg)'"></div>
+              <div class="panel" id="kekmarblecheese1" th:style="'background: url(/image/marblecheese.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekmarblecheese2" th:style="'background: url(/image/marblecheese2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekmarblecheese3" th:style="'background: url(/image/marblecheese3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio3">
@@ -135,9 +134,9 @@
         <tr>
           <td class="tableListPics4" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="redvelvet1" th:style="'background: url(/image/redvelvet.jpg)'"></div>
-              <div class="panel" id="redvelvet2" th:style="'background: url(/image/redvelvet2.jpg)'"></div>
-              <div class="panel" id="redvelvet3" th:style="'background: url(/image/redvelvet3.jpg)'"></div>
+              <div class="panel" id="redvelvet1" th:style="'background: url(/image/redvelvet.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="redvelvet2" th:style="'background: url(/image/redvelvet2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="redvelvet3" th:style="'background: url(/image/redvelvet3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio4">
@@ -156,9 +155,9 @@
         <tr>
           <td class="tableListPics5" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="kekbatik1" th:style="'background: url(/image/kekbatik.jpg)'"></div>
-              <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg)'"></div>
-              <div class="panel" id="kekbatik3" th:style="'background: url(/image/kekbatik3.jpg)'"></div>
+              <div class="panel" id="kekbatik1" th:style="'background: url(/image/kekbatik.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="kekbatik3" th:style="'background: url(/image/kekbatik3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio5">
@@ -177,9 +176,9 @@
         <tr>
           <td class="tableListPics6" colspan="2">
             <div class="containerimage">
-              <div class="panel" id="brownies1" th:style="'background: url(/image/brownies.jpg)'"></div>
-              <div class="panel" id="brownies2" th:style="'background: url(/image/brownies2.jpg)'"></div>
-              <div class="panel" id="brownies3" th:style="'background: url(/image/brownies3.jpg)'"></div>
+              <div class="panel" id="brownies1" th:style="'background: url(/image/brownies.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="brownies2" th:style="'background: url(/image/brownies2.jpg) no-repeat center; background-size: cover;'"></div>
+              <div class="panel" id="brownies3" th:style="'background: url(/image/brownies3.jpg) no-repeat center; background-size: cover;'"></div>
             </div>
           </td>
           <td class="tableRadio6">
@@ -224,8 +223,8 @@
 
       <div class="box">
           <h3>About Us</h3>
-          <a th:href="@{about.html#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
-          <a th:href="@{about.html#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
+          <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+          <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
           <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
       </div>
 
@@ -247,7 +246,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <!-- custom js file  -->
-  <script src="../public/javascript/menu.js"></script>
+  <script th:src="@{javascript/menu.js}"></script>
 
   </body>
 </html>
