--- a/src/main/resources/templates/catalogue.html
+++ b/src/main/resources/templates/catalogue.html
@@ -168,7 +168,7 @@
         </div>
         </div>
 
-        <p class="order"><a th:href="@{menu.html}"><button>Click Here For Further Details!</button></a></p>
+        <p class="order"><a th:href="@{/menu}"><button>Click Here For Further Details!</button></a></p>
       </div>
     </main>
 
