--- a/src/main/resources/templates/user/faqs.html
+++ b/src/main/resources/templates/user/faqs.html
@@ -80,15 +80,15 @@
             <hr class="hr-line" />
             <div class="faq">
               <!-- faq question -->
-              <h2 class="faq-question">How do I place an order?</h2>
+              <h2 class="faq-question">Do Irizq kitchen have any social media?</h2>
               <!-- faq answer -->
               <div class="faq-body">
                 <p>
-                  You may place your order through our INSTAGRAM
+                  Yes!! we have our INSTAGRAM
                   <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span>
                   or our
                   <span><a th:href="@{https://web.facebook.com/rizq.khazinuddin}">FACEBOOK</a></span>
-                  or by calling us at <a th:href="@{tel:+60 1123 4567}" target="_blank">+60 11-2619 1035</a>
+                  or if you want to contact us just click on <a th:href="@{tel:+60 1123 4567}" target="_blank">+60 11-2619 1035</a>
                 </p>
               </div>
             </div>
@@ -110,12 +110,7 @@
               <!-- faq answer -->
               <div class="faq-body">
                 <p>
-                  For fully-paid payment, you will get a refund of 75% of the price 
-                  or store credit for any cancellations made within 72 hours from 
-                  the date of the order. For those who paid the deposit on their 
-                  orders, store credit worth the deposit amount will be given. We 
-                  do not refund any portion of the purchase price for orders 
-                  cancelled more than 72 hours from the date of the order.
+                 you can go to history page to cancel your previous order if your order still pending.
                 </p>
               </div>
             </div>
@@ -130,8 +125,7 @@
                 <p>
                   We require you to make full payment when the order has been placed. 
                   Please note that your order will not be fulfilled if you do not pay 
-                  for the cake in advance. We accept credit cards over the phone and 
-                  send the receipt through email for your convenience.
+                  for the cake in advance.
                 </p>
               </div>
             </div>
@@ -145,10 +139,7 @@
               <div class="faq-body">
                 <p>
                   Generally speaking, all orders are considered final once payment has 
-                  been made and entered into our system, but we still allow customers 
-                  to change their order with at least an 8-days notice from the day you 
-                  placed your order. Please note the cost of your cake may increase when 
-                  you make any customization orders like changing the design, flavors, etc.
+                  been made and entered into our system.
                 </p>
               </div>
             </div>
@@ -176,9 +167,7 @@
               <div class="faq-body">
                 <p>
                   We always like to hear from our customers. Please leave your 
-                  feedback about us on our 
-                  <span><a th:href="@{/feedback}">feedback page</a></span>
-                  , DM us at <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span>
+                  feedback about us on our DM at <span><a th:href="@{https://www.instagram.com/irizq_kitchen/}">@irizq_kitchen</a></span>
                   , or WhatsApp us with your feedback.
                 </p>
               </div>
