--- a/src/main/resources/templates/user/userregister.html
+++ b/src/main/resources/templates/user/userregister.html
@@ -11,7 +11,7 @@
       <!-- cdn icon link  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <!-- custom css file  -->
-      <link rel="stylesheet" th:href="@{stylesheets/register.css}">
+      <link rel="stylesheet" th:href="@{stylesheets/userregister.css}">
       <!-- js bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </head>
@@ -19,26 +19,71 @@
   <body>
     
     <div class="formcontainer">
-        <h1 class="loginform d-flex justify-content-center">NEW USER REGISTRATION</h1>
-        <form class="d-flex justify-content-center">
+        <h1 class="registerform d-flex justify-content-center">NEW CUSTOMER REGISTRATION</h1>
+        <form 
+        class="d-flex justify-content-center"
+        method="post"
+        th:action="@{/userregister}"
+        modelAttribute="userregister"
+        th:object="(${userregister})"
+        >
         <div class="card col-6">
          <div class="card-body">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label ">Full Name</label>
-                <input type="name" class="form-control text-uppercase" id="exampleInputName" placeholder="Ali Bin Abu" required aria-describedby="nameHelp">
+                <label for="exampleInputName" class="form-label ">Full Name</label>
+                <input type="fullname"
+                class="form-control text-uppercase"
+                 id="exampleInputName" 
+                 placeholder="Ali Bin Abu" 
+                 required aria-describedby="nameHelp"
+                 name="custname">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputusername" class="form-label">Username</label>
+                <div class="input-group">
+                  <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                  <input type="text" 
+                  class="form-control" 
+                  id="validationDefaultUsername"
+                   aria-describedby="inputGroupPrepend2" required
+                   name="custusername">
+                </div>
               </div>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="ali@gmail.com" required aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label for="exampleInputEmail" class="form-label">Email address</label>
+              <input type="email"
+               class="form-control" 
+               id="exampleInputEmail"
+                placeholder="ali@gmail.com" 
+                required aria-describedby="emailHelp"
+                name="custemail">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPhone" class="form-label">Phone Number</label>
-                <input type="number" class="form-control" id="exampleInputNumber" placeholder="012 345 6789" maxlength = "11" required>
+                <input type="number"
+                 class="form-control" 
+                 id="exampleInputNumber"
+                  placeholder="012 345 6789"
+                   maxlength = "11" 
+                   required
+                   name="custphonenum">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputAddress" class="form-label">Address</label>
+                <input type="address"
+                 class="form-control"
+                  id="exampleInputAddress"  
+                  required
+                  name="custaddress">
+                  <div id="emailHelp" class="form-text">We'll never share your address with anyone else.</div>
               </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" minlength="8" required>
+              <input type="password"
+               class="form-control" 
+               id="exampleInputPassword1" 
+               minlength="8" required
+               name="custpassword">
               <div id="passwordHelp" class="form-text">At least 8 characters.</div>
             </div>
             <div class="text-center">
@@ -46,8 +91,8 @@
                   Already have account?  
                   <span><a th:href="@{/}">SIGN IN HERE</a></span>
                 </p>
-            <button type="submit" class="btn btn-warning ">Register</button>
-            </div>
+            <button id="btncustregister"type="submit" class="btn btn-warning ">Register</button>
+            </div></div>
             </div>
         </form></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
