add cust profile

--- a/src/main/resources/templates/user/faqs.html
+++ b/src/main/resources/templates/user/faqs.html
@@ -37,7 +37,7 @@
       <a th:href="@{/catalogue}">Catalogue</a>
       <a th:href="@{/about}">About</a>
       <a th:href="@{/faqs}">FAQs</a>
-      <a th:href="@{/userprofile}">Profile</a>
+      <a th:href="@{/custprofile}">Profile</a>
   </nav>
 </header>
 <!-- header section end here  -->
