--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,14 +33,13 @@
       </div>
     </fieldset>
     <div class="mb-3">
-      <label for="exampleInputusername" class="form-label">Username</label>
-      <div class="input-group">
-        <span class="input-group-text" id="inputGroupPrepend2">@</span>
-        <input type="text" 
-        class="form-control" 
-        id="validationDefaultUsername"
-         aria-describedby="inputGroupPrepend2" required>
-      </div>
+      <label for="exampleInputEmail" class="form-label">Email address</label>
+      <input type="email"
+       class="form-control" 
+       id="exampleInputEmail"
+        placeholder="ali@gmail.com" 
+        required aria-describedby="emailHelp"
+        name="custemail">
     </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
