--- a/src/main/resources/templates/user/custprofile.html
+++ b/src/main/resources/templates/user/custprofile.html
@@ -3,29 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> User Registration</title>
-     <!-- css bootstrap -->
+    <title>Customer Profile</title>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
+    <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <!-- favicon -->
-     <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
-      <!-- cdn icon link  -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-      <!-- custom css file  -->
-      <link rel="stylesheet" th:href="@{stylesheets/userregister.css}">
-      <!-- js bootstrap -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+     <!-- cdn icon link  -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+     <!-- custom css file  -->
+     <link rel="stylesheet" th:href="@{stylesheets/custprofile.css}"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
- 
+
+  <!-- header section start here  -->
+ <header class="header">
+    <div class="logoContent">
+        <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <h1 class="logoName">iRizq Kitchen</h1>
+    </div>
+  
+    <nav class="navbar">
+        <a th:href="@{/home}">Home</a>
+        <a th:href="@{/catalogue}">Catalogue</a>
+        <a th:href="@{/about}">About</a>
+        <a th:href="@{/faqs}">FAQs</a>
+        <a th:href="@{/custprofile}">Profile</a>
+    </nav>
+  </header>
+  <!-- header section end here  -->  
+
   <body>
-    
     <div class="formcontainer">
-        <h1 class="registerform d-flex justify-content-center">NEW CUSTOMER REGISTRATION</h1>
+        <h1 class="registerform d-flex justify-content-center">CUSTOMER PROFILE</h1>
         <form 
         class="d-flex justify-content-center"
-        method="post"
-        th:action="@{/userregister}"
-        modelAttribute="userregister"
-        th:object="(${userregister})"
         >
         <div class="card col-6">
          <div class="card-body">
@@ -76,17 +87,14 @@
               <div id="passwordHelp" class="form-text">At least 8 characters.</div>
             </div>
             <div class="text-center">
-                <p>
-                  Already have account?  
-                  <span><a th:href="@{/}">SIGN IN HERE</a></span>
-                </p>
-            <button id="btncustregister"type="submit" class="btn btn-warning ">Register</button>
+            <button id="btncustsave"type="submit" class="btn btn-warning ">SAVE</button>
+            <button id="btnlogout"type="submit" class="btn btn-warning ">LOG OUT</button>
             </div></div>
             </div>
         </form></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
   </body>
-
 </html>
