add user register

--- a/src/main/resources/templates/user/menu.html
+++ b/src/main/resources/templates/user/menu.html
@@ -30,7 +30,7 @@
   </div>
 
   <nav class="navbar">
-      <a th:href="@{user/home}">Home</a>
+      <a th:href="@{/home}">Home</a>
       <a th:href="@{/catalogue}">Catalogue</a>
       <a th:href="@{/about}">About</a>
       <a th:href="@{/faqs}">FAQs</a>
@@ -66,12 +66,6 @@
               <strong> Original</strong>
               <li>Original 6" (RM13)</li>
               <li>Original 8" (RM26)</li>
-            </ul>
-            <br />
-            <ul>
-              <strong>Dua Benua</strong>
-              <li>Dua Benua 6" (RM14)</li>
-              <li>Dua Benua 8" (RM28)</li>
             </ul>
           </td>
         </tr>
@@ -246,11 +240,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <!-- custom js file  -->
-<<<<<<< HEAD:src/main/resources/templates/menu.html
-  <script th:src="@{public/javascript/menu.js}"></script>
-=======
   <script th:src="@{javascript/menu.js}"></script>
->>>>>>> 6a2bdc0101391cbb7ae98ea4f982da95ad44162b:src/main/resources/templates/user/menu.html
 
   </body>
 </html>
