--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,11 +24,11 @@
      <div class="card-body">
     <fieldset class= "d-flex justify-content-center">
       <div class="form-check form-check-inline ">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="admin">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" th:value="admin">
         <label class="form-check-label" for="inlineRadio1">Admin</label>
       </div>
       <div class="form-check form-check-inline" >
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="customer">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" th:value="customer">
         <label class="form-check-label" for="inlineRadio2">Customer</label>
       </div>
     </fieldset>
