update login controller

--- a/src/main/resources/templates/user/about.html
+++ b/src/main/resources/templates/user/about.html
@@ -24,7 +24,7 @@
  <!-- header section start here  -->
  <header class="header">
     <div class="logoContent">
-        <a th:href="@{/}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
         <h1 class="logoName">iRizq Kitchen</h1>
     </div>
   
