--- a/src/main/resources/templates/user/custprofile.html
+++ b/src/main/resources/templates/user/custprofile.html
@@ -88,7 +88,7 @@
             </div>
             <div class="text-center">
             <button id="btncustsave"type="submit" class="btn btn-warning ">SAVE</button>
-            <button id="btnlogout"type="submit" class="btn btn-warning ">LOG OUT</button>
+            <a th:href="@{/logout}"><button id="btnlogout"type="button" class="btn btn-warning ">LOG OUT</button></a>
             </div></div>
             </div>
         </form></div>
