--- a/src/main/resources/templates/user/userregister.html
+++ b/src/main/resources/templates/user/userregister.html
@@ -78,7 +78,7 @@
             <div class="text-center">
                 <p>
                   Already have account?  
-                  <span><a th:href="@{/}">SIGN IN HERE</a></span>
+                  <span><a th:href="@{/login}">SIGN IN HERE</a></span>
                 </p>
             <button id="btncustregister"type="submit" class="btn btn-warning ">Register</button>
             </div></div>
