--- a/src/main/resources/templates/admin/bakerregister.html
+++ b/src/main/resources/templates/admin/bakerregister.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Staff Registration</title>
+    <title> Baker Registration</title>
      <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      <!-- favicon -->
@@ -18,64 +18,64 @@
   <body>
     
     <div class="formcontainer">
-      <h1 class="registerform d-flex justify-content-center">NEW STAFF REGISTRATION</h1>
+      <h1 class="registerform d-flex justify-content-center">NEW BAKER REGISTRATION</h1>
       <form 
       class="d-flex justify-content-center"
       method="post"
-      th:action="@{/adminregister}"
-      modelAttribute="adminregister"
-      th:object="(${adminregister})"
+      th:action="@{/bakerregister}"
+      modelAttribute="bakerregister"
+      th:object="(${bakerregister})"
       >
       <div class="card col-6">
        <div class="card-body">
           <div class="mb-3">
-              <label for="adminInputName" class="form-label ">Full Name</label>
+              <label for="bakerInputName" class="form-label ">Full Name</label>
               <input type="fullname"
               class="form-control text-uppercase"
-               id="exampleInputName" 
+               id="bakerInputName" 
                placeholder="Ali Bin Abu" 
                required aria-describedby="nameHelp"
-               name="adminname">
+               name="bakername">
             </div>
           <div class="mb-3">
-            <label for="adminInputEmail" class="form-label">Email address</label>
+            <label for="bakerInputEmail" class="form-label">Email address</label>
             <input type="email"
              class="form-control" 
-             id="adminInputEmail"
+             id="bakerInputEmail"
               placeholder="ali@gmail.com" 
               required aria-describedby="emailHelp"
-              name="adminemail">
+              name="bakeremail">
           </div>
           <div class="mb-3">
-              <label for="adminInputPhone" class="form-label">Phone Number</label>
+              <label for="bakerInputPhone" class="form-label">Phone Number</label>
               <input type="number"
                class="form-control" 
-               id="adminInputNumber"
+               id="bakerInputNumber"
                 placeholder="012 345 6789"
                  maxlength = "11" 
                  required
-                 name="adminphonenum">
+                 name="bakerphonenumber">
             </div>
             <div class="mb-3">
-              <label for="adminInputAddress" class="form-label">Address</label>
+              <label for="bakerInputAddress" class="form-label">Address</label>
               <input type="address"
                class="form-control"
-                id="adminInputAddress"  
+                id="bakerInputAddress"  
                 required
-                name="adminaddress">
+                name="bakeraddress">
                 <div id="emailHelp" class="form-text">We'll never share your address with anyone else.</div>
             </div>
           <div class="mb-3">
-            <label for="adminpassword" class="form-label">Password</label>
+            <label for="bakerpassword" class="form-label">Password</label>
             <input type="password"
              class="form-control" 
-             id="adminPassword" 
+             id="bakerPassword" 
              minlength="8" required
-             name="adminpassword">
+             name="bakerpassword">
             <div id="passwordHelp" class="form-text">At least 8 characters.</div>
           </div>
           <div class="text-center">
-          <button id="btnadminregister" type="submit" class="btn btn-warning ">Register</button>
+          <button id="btnbakerregister" type="submit" class="btn btn-warning ">Register</button>
           </div></div>
           </div>
       </form></div>
